--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  mobx: ^0.2.1+1
-  flutter_mobx: ^0.2.1+1
+  mobx: ^0.3.0+3
+  flutter_mobx: ^0.3.0
   provider: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,7 +32,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.5.1
-  mobx_codegen: ^0.2.1+1
+  mobx_codegen: ^0.3.0+1
 
 
 # For information on the generic Dart part of this file, see the
